<resources>
    <string name="app_name">Candidate Portfolio</string>
    <!-- Terms for GUI Main Activity -->
    <string name="candidate_name">Abraham Lincoln</string>
    <string name="running_for">President</string>
    <string name="state">New Hampshire State</string>
    <string name="year">2022</string>

    <!-- RESUME child activity -->
    <string name="resume">Curriculum Vitae</string>
    <string name="download_resume">Download Resume</string>
    <string name="mail_resume">Mail Resume</string>
    <string name="inform_your_email">Inform your email</string>
    <string name="lorem_ipsum">Abraham Lincoln was an American statesman and lawyer who served as the 16th President of the United States from March 1861 until his assassination in April 1865.
        \n\nLincoln led the United States through the American Civil War—its bloodiest war and perhaps its greatest moral, constitutional, and political crisis.
        \n\nCriado em uma família carente na fronteira oeste, Lincoln foi autodidata, tornou-se advogado, líder do Partido Whig, deputado estadual de Illinois durante os anos de 1830 e membro da Câmara dos Representantes por um mandato durante a década de 1840.
        \n\nLincoln foi assassinado pelo ator e simpatizante confederado John Wilkes Booth.
        \n\nComo foi o primeiro presidente dos Estados Unidos ter sido assassinado, sua morte levou seu país a entrar em luto.
        \n\nLincoln tem sido consistentemente considerado por estudiosos e pelo povo como um dos três maiores presidentes dos Estados Unidos.
        \n\nBorn: February 12, 1809, Larue County, Kentucky, United States
        \n\nHeight: 1.93 m
        \n\nAssassinated: April 15, 1865, Petersen House, Washington, D.C., United States
        \n\nParty: National Union Party
        \n\nSpouse: Mary Todd Lincoln (m. 1842–1865)
        \n\nChildren: Robert Todd Lincoln, Edward Baker Lincoln, William Wallace Lincoln, Tad Lincoln
        \n\n(Fonte: Wikipedia)
    </string>

    <!-- ELECTION child activity -->
    <string name="election">Instructions for Election Day</string>
    <string name="instruction">On election day,
        \n\n1) Go to your polling station and identify yourself.
        \n\n2) Check your ballot! Make sure you have completely filled in the oval next to your choices. If you vote for more candidates than allowed or if you vote both Yes and No on a measure, it is called an overvote. Your vote will not count for that candidate or measure.
        \n\n3) Review your ballot and prepare to return it. Ensure you have correctly marked your choice for each contest. Your official ballot will contain contests printed on both front and back. If you make an error on your ballot, damage it in any way or lose it, contact the Multnomah County Elections Division at 503-988-3720 to request assistance.
        \n\n4) Prepare to return your voted ballot. Place the ballot in the return envelope. You may use the optional secrecy envelope, but it is not required. Election staff will ensure the secrecy of your ballot.
        \n\n5) Remember: Read the Voter’s Statement on the return envelope and sign it on the signature line. Your ballot will not be counted if the return envelope is not signed. Every signature is checked against the registration signature on file and the signature must match for the ballot to be counted.
        \n\n6) Return your ballot.
        By mail: Using the postage paid return envelope to the signed and sealed. Mail it as soon as possible to arrive at the Multnomah County Elections Division no later than 8:00 p.m. on Election Day. A postmark does not count!
        In person at an official drop site:
        Deliver the signed and sealed return identification envelope to any official drop site no later than 8:00 p.m. on Election Day. Postage is NOT required if delivered to an official ballot drop box location.and when it\'s time to vote, enter the number 00 to elect this candidate to the presidency of the republic.</string>

    <!-- LAW PROJECTS child activity -->
    <string name="law_projects">Projetos de lei</string>

    <!-- CONTACT US child activity -->
    <string name="contact_us">Contact us</string>
    <string name="inform_complete_name">Complete name</string>
    <string name="inform_contact_email">Contact email</string>
    <string name="inform_message">Let us know your message</string>
    <string name="send_message">Send message</string>

    <!-- Content for list view of Law Projects -->
    <string-array name="lawProjects">
        <item>Law Project 01</item>
        <item>Law Project 02</item>
        <item>Law Project 03</item>
        <item>Law Project 04</item>
        <item>Law Project 05</item>
        <item>Law Project 06</item>
        <item>Law Project 07</item>
        <item>Law Project 08</item>
        <item>Law Project 09</item>
        <item>Law Project 10</item>
        <item>Law Project 11</item>
        <item>Law Project 12</item>
        <item>Law Project 13</item>
        <item>Law Project 14</item>
        <item>Law Project 15</item>
        <item>Law Project 16</item>
        <item>Law Project 17</item>
        <item>Law Project 18</item>
        <item>Law Project 19</item>
        <item>Law Project 20</item>
        <item>Law Project 21</item>
        <item>Law Project 22</item>
        <item>Law Project 23</item>
        <item>Law Project 24</item>
        <item>Law Project 25</item>
    </string-array>

</resources>